# react-native-cpp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pod_helpers.rb  react-native-cpp.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/cpp/: CppModule.java  CppPackage.java
android/src/newarch/: CppSpec.java
android/src/oldarch/: CppSpec.java
cpp/: JsiArrayBuffer.h  JsiLogger.h  JsiModuleRegistry.cpp  JsiModuleRegistry.h  JsiNativeClass.h  JsiNativeModule.h  JsiNativeObject.h  JsiNativeState.h  RNJsi.h  react-native-cpp.cpp  react-native-cpp.h
example/: app.json  package.json  react-native-cpp.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/cppexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/cpp/: jsi_test_class.h  jsi_test_class_with_state.h  jsi_test_object.h  jsi_test_object_with_state.h  react-native-cpp.cpp  test-api.cpp  test-api.h  test_object.h  types.ts
example/cpp/api/: simple_jsi_hostobject.h  test_module.cpp  test_module.h  test_object.cpp  test_object.h
example/ios/: File.swift  Podfile
example/ios/CppExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/CppExample.xcodeproj/: project.pbxproj
example/ios/CppExample.xcodeproj/xcshareddata/xcschemes/: CppExample.xcscheme
example/ios/CppExampleTests/: CppExampleTests.m
example/src/: App.tsx
example/src/components/: Flex.tsx  Horizontal.tsx  Spacer.tsx  T.tsx  TestSection.tsx  index.ts
example/src/testrunner/: index.ts  runner.ts  types.ts
example/src/tests/: createTest.ts  index.ts  tests.ts
ios/: Cpp.h  Cpp.mm  RNJsiModule.h  RNJsiModule.mm
src/: NativeCpp.ts  index.tsx
